honey/lib/src/compiler/antlr/HoneyTalkParser.dart
// Generated from HoneyTalk.g4 by ANTLR 4.11.1
// ignore_for_file: unused_import, unused_local_variable, prefer_single_quotes
import 'package:antlr4/antlr4.dart';

import 'HoneyTalkVisitor.dart';
import 'HoneyTalkBaseVisitor.dart';
const int RULE_script = 0, RULE_statement = 1, RULE_maybe = 2, RULE_actionStatement = 3, 
          RULE_clickType = 4, RULE_swipeType = 5, RULE_expression = 6, RULE_comparisonOp = 7, 
          RULE_term = 8, RULE_property = 9, RULE_function = 10, RULE_handler = 11, 
          RULE_literal = 12, RULE_cardinalValue = 13, RULE_ordinal = 14, 
          RULE_widgetIdent = 15, RULE_widgetNameModifier = 16, RULE_widgetReference = 17, 
          RULE_widgetReferencePosition = 18, RULE_widgetWhere = 19, RULE_widget = 20, 
          RULE_widgetType = 21, RULE_singleDirection = 22, RULE_doubleDirection = 23, 
          RULE_character = 24, RULE_word = 25, RULE_line = 26, RULE_item = 27, 
          RULE_of = 28, RULE_click = 29, RULE_swipe = 30, RULE_isAre = 31, 
          RULE_isAreNot = 32;
class HoneyTalkParser extends Parser {
  static final checkVersion = () => RuntimeMetaData.checkVersion('4.11.1', RuntimeMetaData.VERSION);
  static const int TOKEN_EOF = IntStream.EOF;

  static final List<DFA> _decisionToDFA = List.generate(
      _ATN.numberOfDecisions, (i) => DFA(_ATN.getDecisionState(i), i));
  static final PredictionContextCache _sharedContextCache = PredictionContextCache();
  static const int TOKEN_T__0 = 1, TOKEN_T__1 = 2, TOKEN_T__2 = 3, TOKEN_T__3 = 4, 
                   TOKEN_T__4 = 5, TOKEN_T__5 = 6, TOKEN_T__6 = 7, TOKEN_T__7 = 8, 
                   TOKEN_T__8 = 9, TOKEN_T__9 = 10, TOKEN_T__10 = 11, TOKEN_T__11 = 12, 
                   TOKEN_T__12 = 13, TOKEN_T__13 = 14, TOKEN_T__14 = 15, 
                   TOKEN_T__15 = 16, TOKEN_T__16 = 17, TOKEN_T__17 = 18, 
                   TOKEN_T__18 = 19, TOKEN_T__19 = 20, TOKEN_T__20 = 21, 
                   TOKEN_T__21 = 22, TOKEN_T__22 = 23, TOKEN_T__23 = 24, 
                   TOKEN_T__24 = 25, TOKEN_T__25 = 26, TOKEN_T__26 = 27, 
                   TOKEN_T__27 = 28, TOKEN_T__28 = 29, TOKEN_T__29 = 30, 
                   TOKEN_T__30 = 31, TOKEN_T__31 = 32, TOKEN_T__32 = 33, 
                   TOKEN_T__33 = 34, TOKEN_T__34 = 35, TOKEN_T__35 = 36, 
                   TOKEN_T__36 = 37, TOKEN_T__37 = 38, TOKEN_T__38 = 39, 
                   TOKEN_T__39 = 40, TOKEN_T__40 = 41, TOKEN_T__41 = 42, 
                   TOKEN_T__42 = 43, TOKEN_T__43 = 44, TOKEN_T__44 = 45, 
                   TOKEN_T__45 = 46, TOKEN_T__46 = 47, TOKEN_T__47 = 48, 
                   TOKEN_T__48 = 49, TOKEN_T__49 = 50, TOKEN_T__50 = 51, 
                   TOKEN_T__51 = 52, TOKEN_T__52 = 53, TOKEN_T__53 = 54, 
                   TOKEN_T__54 = 55, TOKEN_T__55 = 56, TOKEN_T__56 = 57, 
                   TOKEN_T__57 = 58, TOKEN_T__58 = 59, TOKEN_T__59 = 60, 
                   TOKEN_T__60 = 61, TOKEN_T__61 = 62, TOKEN_T__62 = 63, 
                   TOKEN_T__63 = 64, TOKEN_T__64 = 65, TOKEN_T__65 = 66, 
                   TOKEN_T__66 = 67, TOKEN_T__67 = 68, TOKEN_T__68 = 69, 
                   TOKEN_T__69 = 70, TOKEN_T__70 = 71, TOKEN_T__71 = 72, 
                   TOKEN_T__72 = 73, TOKEN_T__73 = 74, TOKEN_T__74 = 75, 
                   TOKEN_T__75 = 76, TOKEN_T__76 = 77, TOKEN_T__77 = 78, 
                   TOKEN_T__78 = 79, TOKEN_T__79 = 80, TOKEN_T__80 = 81, 
                   TOKEN_T__81 = 82, TOKEN_T__82 = 83, TOKEN_T__83 = 84, 
                   TOKEN_T__84 = 85, TOKEN_T__85 = 86, TOKEN_T__86 = 87, 
                   TOKEN_T__87 = 88, TOKEN_T__88 = 89, TOKEN_T__89 = 90, 
                   TOKEN_T__90 = 91, TOKEN_T__91 = 92, TOKEN_T__92 = 93, 
                   TOKEN_T__93 = 94, TOKEN_T__94 = 95, TOKEN_T__95 = 96, 
                   TOKEN_T__96 = 97, TOKEN_T__97 = 98, TOKEN_T__98 = 99, 
                   TOKEN_T__99 = 100, TOKEN_T__100 = 101, TOKEN_T__101 = 102, 
                   TOKEN_T__102 = 103, TOKEN_T__103 = 104, TOKEN_T__104 = 105, 
                   TOKEN_T__105 = 106, TOKEN_T__106 = 107, TOKEN_T__107 = 108, 
                   TOKEN_T__108 = 109, TOKEN_T__109 = 110, TOKEN_T__110 = 111, 
                   TOKEN_T__111 = 112, TOKEN_T__112 = 113, TOKEN_T__113 = 114, 
                   TOKEN_T__114 = 115, TOKEN_T__115 = 116, TOKEN_T__116 = 117, 
                   TOKEN_T__117 = 118, TOKEN_T__118 = 119, TOKEN_T__119 = 120, 
                   TOKEN_T__120 = 121, TOKEN_T__121 = 122, TOKEN_T__122 = 123, 
                   TOKEN_T__123 = 124, TOKEN_T__124 = 125, TOKEN_T__125 = 126, 
                   TOKEN_T__126 = 127, TOKEN_T__127 = 128, TOKEN_T__128 = 129, 
                   TOKEN_T__129 = 130, TOKEN_T__130 = 131, TOKEN_T__131 = 132, 
                   TOKEN_T__132 = 133, TOKEN_T__133 = 134, TOKEN_T__134 = 135, 
                   TOKEN_T__135 = 136, TOKEN_T__136 = 137, TOKEN_T__137 = 138, 
                   TOKEN_T__138 = 139, TOKEN_T__139 = 140, TOKEN_T__140 = 141, 
                   TOKEN_T__141 = 142, TOKEN_T__142 = 143, TOKEN_T__143 = 144, 
                   TOKEN_T__144 = 145, TOKEN_T__145 = 146, TOKEN_T__146 = 147, 
                   TOKEN_T__147 = 148, TOKEN_T__148 = 149, TOKEN_T__149 = 150, 
                   TOKEN_T__150 = 151, TOKEN_T__151 = 152, TOKEN_T__152 = 153, 
                   TOKEN_T__153 = 154, TOKEN_T__154 = 155, TOKEN_T__155 = 156, 
                   TOKEN_T__156 = 157, TOKEN_T__157 = 158, TOKEN_T__158 = 159, 
                   TOKEN_T__159 = 160, TOKEN_T__160 = 161, TOKEN_T__161 = 162, 
                   TOKEN_T__162 = 163, TOKEN_T__163 = 164, TOKEN_T__164 = 165, 
                   TOKEN_T__165 = 166, TOKEN_T__166 = 167, TOKEN_T__167 = 168, 
                   TOKEN_T__168 = 169, TOKEN_T__169 = 170, TOKEN_T__170 = 171, 
                   TOKEN_T__171 = 172, TOKEN_T__172 = 173, TOKEN_T__173 = 174, 
                   TOKEN_T__174 = 175, TOKEN_T__175 = 176, TOKEN_T__176 = 177, 
                   TOKEN_T__177 = 178, TOKEN_T__178 = 179, TOKEN_T__179 = 180, 
                   TOKEN_T__180 = 181, TOKEN_T__181 = 182, TOKEN_T__182 = 183, 
                   TOKEN_T__183 = 184, TOKEN_T__184 = 185, TOKEN_T__185 = 186, 
                   TOKEN_T__186 = 187, TOKEN_T__187 = 188, TOKEN_T__188 = 189, 
                   TOKEN_NUMBER_LITERAL = 190, TOKEN_BOOL_LITERAL = 191, 
                   TOKEN_STRING_LITERAL = 192, TOKEN_REGEX_LITERAL = 193, 
                   TOKEN_REGEX_MODIFIER = 194, TOKEN_THE = 195, TOKEN_A_AN = 196, 
                   TOKEN_ID = 197, TOKEN_ALPHA = 198, TOKEN_DIGIT = 199, 
                   TOKEN_COMMENT = 200, TOKEN_MULTILINE_COMMENT = 201, TOKEN_NEWLINE = 202, 
                   TOKEN_WHITESPACE = 203, TOKEN_UNLEXED_CHAR = 204;

  @override
  final List<String> ruleNames = [
    'script', 'statement', 'maybe', 'actionStatement', 'clickType', 'swipeType', 
    'expression', 'comparisonOp', 'term', 'property', 'function', 'handler', 
    'literal', 'cardinalValue', 'ordinal', 'widgetIdent', 'widgetNameModifier', 
    'widgetReference', 'widgetReferencePosition', 'widgetWhere', 'widget', 
    'widgetType', 'singleDirection', 'doubleDirection', 'character', 'word', 
    'line', 'item', 'of', 'click', 'swipe', 'isAre', 'isAreNot'
  ];

  static final List<String?> _LITERAL_NAMES = [
      null, "'.'", "'if'", "'maybe'", "'try'", "'to'", "'optional'", "'optionally'", 
      "'verify'", "'check'", "'assert'", "'expect'", "'test'", "'make'", 
      "'sure'", "'that'", "'see'", "'look'", "'at'", "'on'", "'with'", "'offset'", 
      "'enter'", "'type'", "'set'", "'as'", "'put'", "'store'", "'in'", 
      "'into'", "'wait'", "'for'", "'print'", "'output'", "'message'", "'by'", 
      "'left'", "'double'", "'long'", "'right'", "'up'", "'down'", "'('", 
      "')'", "'not'", "'-'", "'there'", "'is'", "'visible'", "'exist'", 
      "'exists'", "'^'", "'/'", "'*'", "'+'", "'&&'", "'&'", "'starts'", 
      "'ends'", "'contains'", "'matches'", "'and'", "'or'", "'='", "'eq'", 
      "'equal'", "'equals'", "'!='", "'<>'", "'neq'", "'>='", "'gte'", "'greater'", 
      "'than'", "'<'", "'<='", "'lte'", "'less'", "'>'", "'lt'", "'length'", 
      "'number'", "'count'", "'size'", "'format'", "'from'", "'now'", "','", 
      "'zero'", "'one'", "'two'", "'three'", "'four'", "'five'", "'six'", 
      "'seven'", "'eight'", "'nine'", "'ten'", "'first'", "'second'", "'third'", 
      "'fourth'", "'fifth'", "'sixth'", "'seventh'", "'eighth'", "'ninth'", 
      "'tenth'", "'last'", "'exactly'", "'case'", "'sensitive'", "'insensitive'", 
      "'screen'", "'edge'", "'of'", "'parent'", "'corner'", "'half'", "'side'", 
      "'quarter'", "'%'", "'percent'", "'within'", "'inside'", "'below'", 
      "'above'", "'where'", "'whose'", "'widget'", "'widgets'", "'button'", 
      "'buttons'", "'btn'", "'btns'", "'link'", "'links'", "'text'", "'input'", 
      "'field'", "'fields'", "'edit'", "'texts'", "'textfield'", "'textfields'", 
      "'inputfield'", "'inputfields'", "'edittext'", "'edittexts'", "'slider'", 
      "'sliders'", "'image'", "'images'", "'box'", "'boxes'", "'checkbox'", 
      "'checkboxes'", "'switch'", "'switches'", "'header'", "'headers'", 
      "'top'", "'upper'", "'bottom'", "'lower'", "'character'", "'characters'", 
      "'char'", "'chars'", "'word'", "'words'", "'line'", "'lines'", "'item'", 
      "'items'", "'click'", "'tap'", "'press'", "'push'", "'hit'", "'slam'", 
      "'swipe'", "'slide'", "'scroll'", "'are'", "'does'", "'isn't'", "'aren't'", 
      "'doesn't'", null, null, null, null, null, "'the'"
  ];
  static final List<String?> _SYMBOLIC_NAMES = [
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, "NUMBER_LITERAL", "BOOL_LITERAL", "STRING_LITERAL", 
      "REGEX_LITERAL", "REGEX_MODIFIER", "THE", "A_AN", "ID", "ALPHA", "DIGIT", 
      "COMMENT", "MULTILINE_COMMENT", "NEWLINE", "WHITESPACE", "UNLEXED_CHAR"
  ];
  static final Vocabulary VOCABULARY = VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  @override
  Vocabulary get vocabulary {
    return VOCABULARY;
  }

  @override
  String get grammarFileName => 'HoneyTalk.g4';

  @override
  List<int> get serializedATN => _serializedATN;

  @override
  ATN getATN() {
   return _ATN;
  }

  HoneyTalkParser(TokenStream input) : super(input) {
    interpreter = ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  ScriptContext script() {
    dynamic _localctx = ScriptContext(context, state);
    enterRule(_localctx, 0, RULE_script);
    int _la;
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      state = 74;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 1, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          state = 66;
          statement();
          state = 68;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          if (_la == TOKEN_T__0) {
            state = 67;
            match(TOKEN_T__0);
          }

          state = 70;
          match(TOKEN_NEWLINE); 
        }
        state = 76;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 1, context);
      }
      state = 81;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (((_la) & ~0x3f) == 0 && ((1 << _la) & 128605510385624) != 0 || (((_la - 80)) & ~0x3f) == 0 && ((1 << (_la - 80)) & 5763481627422359391) != 0 || (((_la - 144)) & ~0x3f) == 0 && ((1 << (_la - 144)) & 10064929436726271) != 0) {
        state = 77;
        statement();
        state = 79;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_T__0) {
          state = 78;
          match(TOKEN_T__0);
        }

      }

      state = 86;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_NEWLINE) {
        state = 83;
        match(TOKEN_NEWLINE);
        state = 88;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 89;
      match(TOKEN_EOF);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  StatementContext statement() {
    dynamic _localctx = StatementContext(context, state);
    enterRule(_localctx, 2, RULE_statement);
    int _la;
    try {
      state = 103;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 8, context)) {
      case 1:
        _localctx = StatementActionContext(_localctx);
        enterOuterAlt(_localctx, 1);
        state = 92;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (((_la) & ~0x3f) == 0 && ((1 << _la) & 216) != 0) {
          state = 91;
          maybe();
        }

        state = 94;
        actionStatement();
        state = 97;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_T__1) {
          state = 95;
          match(TOKEN_T__1);
          state = 96;
          expression(0);
        }

        break;
      case 2:
        _localctx = StatementExpressionContext(_localctx);
        enterOuterAlt(_localctx, 2);
        state = 100;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (((_la) & ~0x3f) == 0 && ((1 << _la) & 216) != 0) {
          state = 99;
          maybe();
        }

        state = 102;
        expression(0);
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  MaybeContext maybe() {
    dynamic _localctx = MaybeContext(context, state);
    enterRule(_localctx, 4, RULE_maybe);
    int _la;
    try {
      state = 112;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_T__2:
        enterOuterAlt(_localctx, 1);
        state = 105;
        match(TOKEN_T__2);
        break;
      case TOKEN_T__3:
        enterOuterAlt(_localctx, 2);
        state = 106;
        match(TOKEN_T__3);
        state = 108;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_T__4) {
          state = 107;
          match(TOKEN_T__4);
        }

        break;
      case TOKEN_T__5:
        enterOuterAlt(_localctx, 3);
        state = 110;
        match(TOKEN_T__5);
        break;
      case TOKEN_T__6:
        enterOuterAlt(_localctx, 4);
        state = 111;
        match(TOKEN_T__6);
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ActionStatementContext actionStatement() {
    dynamic _localctx = ActionStatementContext(context, state);
    enterRule(_localctx, 6, RULE_actionStatement);
    int _la;
    try {
      state = 220;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 32, context)) {
      case 1:
        _localctx = ActionVerifyContext(_localctx);
        enterOuterAlt(_localctx, 1);
        state = 121;
        errorHandler.sync(this);
        switch (tokenStream.LA(1)!) {
        case TOKEN_T__7:
          state = 114;
          match(TOKEN_T__7);
          break;
        case TOKEN_T__8:
          state = 115;
          match(TOKEN_T__8);
          break;
        case TOKEN_T__9:
          state = 116;
          match(TOKEN_T__9);
          break;
        case TOKEN_T__10:
          state = 117;
          match(TOKEN_T__10);
          break;
        case TOKEN_T__11:
          state = 118;
          match(TOKEN_T__11);
          break;
        case TOKEN_T__12:
          state = 119;
          match(TOKEN_T__12);
          state = 120;
          match(TOKEN_T__13);
          break;
        default:
          throw NoViableAltException(this);
        }
        state = 124;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_T__14) {
          state = 123;
          match(TOKEN_T__14);
        }

        state = 126;
        expression(0);
        break;
      case 2:
        _localctx = ActionSeeContext(_localctx);
        enterOuterAlt(_localctx, 2);
        state = 130;
        errorHandler.sync(this);
        switch (tokenStream.LA(1)!) {
        case TOKEN_T__15:
          state = 127;
          match(TOKEN_T__15);
          break;
        case TOKEN_T__16:
          state = 128;
          match(TOKEN_T__16);
          state = 129;
          match(TOKEN_T__17);
          break;
        default:
          throw NoViableAltException(this);
        }
        state = 132;
        expression(0);
        break;
      case 3:
        _localctx = ActionClickContext(_localctx);
        enterOuterAlt(_localctx, 3);
        state = 133;
        clickType();
        state = 135;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_T__18) {
          state = 134;
          match(TOKEN_T__18);
        }

        state = 137;
        _localctx.target = expression(0);
        state = 146;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (((_la) & ~0x3f) == 0 && ((1 << _la) & 3407872) != 0) {
          state = 143;
          errorHandler.sync(this);
          switch (tokenStream.LA(1)!) {
          case TOKEN_T__17:
            state = 138;
            match(TOKEN_T__17);
            break;
          case TOKEN_T__19:
          case TOKEN_T__20:
            state = 140;
            errorHandler.sync(this);
            _la = tokenStream.LA(1)!;
            if (_la == TOKEN_T__19) {
              state = 139;
              match(TOKEN_T__19);
            }

            state = 142;
            match(TOKEN_T__20);
            break;
          default:
            throw NoViableAltException(this);
          }
          state = 145;
          _localctx.offset = expression(0);
        }

        break;
      case 4:
        _localctx = ActionClickContext(_localctx);
        enterOuterAlt(_localctx, 4);
        state = 148;
        clickType();
        state = 153;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (((_la) & ~0x3f) == 0 && ((1 << _la) & 127543349346816) != 0 || (((_la - 80)) & ~0x3f) == 0 && ((1 << (_la - 80)) & 5763481627422359391) != 0 || (((_la - 144)) & ~0x3f) == 0 && ((1 << (_la - 144)) & 10062734708438015) != 0) {
          state = 150;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          if (_la == TOKEN_T__18) {
            state = 149;
            match(TOKEN_T__18);
          }

          state = 152;
          _localctx.target = expression(0);
        }

        state = 160;
        errorHandler.sync(this);
        switch (tokenStream.LA(1)!) {
        case TOKEN_T__17:
          state = 155;
          match(TOKEN_T__17);
          break;
        case TOKEN_T__19:
        case TOKEN_T__20:
          state = 157;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          if (_la == TOKEN_T__19) {
            state = 156;
            match(TOKEN_T__19);
          }
